--- a/src/pages/frontPage/frontPage.scss
+++ b/src/pages/frontPage/frontPage.scss
@@ -1,7 +1,7 @@
 .frontPage{
     margin-top: 50px;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
     align-items: center;
     font-size: 40px;
 }
