--- a/src/pages/frontPage/frontPage.scss
+++ b/src/pages/frontPage/frontPage.scss
@@ -1,20 +1,22 @@
-.frontPage{
+.frontpage{
     margin-top: 50px;
     display: flex;
     justify-content: space-around;
     align-items: center;
     width: 80%;
     margin: auto;
+    flex-direction: row;
 
     &__tagline {
         width: 60%;
 
          &__text > h1 {
-             font-size: 40px;
+             font-size: 35px;
          }
 
          &__text > p {
              font-size: 20px;
+             padding-bottom: 30px;
          }
     }
 
