login/register functionality successfully integrated with be

--- a/src/components/Navigation/navbar.scss
+++ b/src/components/Navigation/navbar.scss
@@ -3,7 +3,7 @@ nav.navbar{
     justify-content: space-between;
     padding: 15px;
 }
-.logo{
+.logo a{
     font-size: 25px;
     color: #03256c;
     font-weight: bold;
