minor ui improvements

--- a/src/pages/Dashboard/Profile/Profile.scss
+++ b/src/pages/Dashboard/Profile/Profile.scss
@@ -15,5 +15,9 @@
     &__batch {
         width: 60%;
         margin-left: 10%;
+
+        &__display {
+            margin-top: 10px;
+        }
     }
 }
