revolutionizing design + code refactor

--- a/src/components/Navigation/navbar.scss
+++ b/src/components/Navigation/navbar.scss
@@ -19,7 +19,8 @@ nav ul.navLink{
 }
 .navLink li{
     cursor: pointer;
-    margin-left: 20px;
+    // margin-left: 20px;
+    margin-top: -20px;
 }
 .navLink li:hover{
     color: #03256c;
