--- a/src/pages/frontPage/frontPage.scss
+++ b/src/pages/frontPage/frontPage.scss
@@ -1,27 +1,52 @@
 .frontpage{
     margin-top: 50px;
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
     width: 80%;
     margin: auto;
-    flex-direction: row;
+    flex-direction: column-reverse;
 
     &__tagline {
         width: 60%;
+        // display: flex;
+        // justify-content: center;
+        // align-items: center;
 
          &__text > h1 {
              font-size: 35px;
+            //  display: flex;
+            //  justify-content: center;
+            //  align-items: center;
+            // display: flex;
+            // justify-content: center;
+            // align-items: center;
          }
 
          &__text > p {
              font-size: 20px;
              padding-bottom: 30px;
+            //  display: flex;
+            //  justify-content: center;
+            //  align-items: center;
          }
+
+         &__text {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+         }
+
+        //  &__text > Link {
+        //     display: flex;
+        //     justify-content: center;
+        //     align-items: center;
+        //  }
     }
 
     &__img {
-        width: 40%;
+        width: 100%;
     }
 }
 .frontPageImg{
